--- a/source/dotnet/LiveCardBrowser/packages.config
+++ b/source/dotnet/LiveCardBrowser/packages.config
@@ -1,4 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net46" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net46" />
+  <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net46" />
+  <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net46" />
 </packages>
