--- a/source/dotnet/LiveCardClient/packages.config
+++ b/source/dotnet/LiveCardClient/packages.config
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.VisualStudio.Threading" version="15.3.20" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net46" />
-  <package id="Nerdbank.FullDuplexStream" version="1.0.9" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
-  <package id="StreamJsonRpc" version="1.2.8" targetFramework="net46" />
-  <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net46" />
-  <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net46" />
-  <package id="Validation" version="2.3.7" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.3.20" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net47" />
+  <package id="Nerdbank.FullDuplexStream" version="1.0.9" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net47" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
+  <package id="Validation" version="2.3.7" targetFramework="net47" />
 </packages>
