--- a/source/dotnet/LiveCardBrowser/LiveCardBrowser.csproj
+++ b/source/dotnet/LiveCardBrowser/LiveCardBrowser.csproj
@@ -101,6 +101,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="VisibilityConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
