--- a/source/dotnet/LiveCardClient/LiveCardClient.csproj
+++ b/source/dotnet/LiveCardClient/LiveCardClient.csproj
@@ -82,7 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ElementChangedArgs.cs" />
-    <Compile Include="EventBinder.cs" />
+    <Compile Include="ServerEventBinder.cs" />
     <Compile Include="LiveCard.cs" />
     <Compile Include="LiveCardClientAPI.cs" />
     <Compile Include="LiveCardServerAPI.cs" />
