--- a/source/dotnet/LiveCardClient/packages.config
+++ b/source/dotnet/LiveCardClient/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="Microsoft.VisualStudio.Threading" version="15.3.20" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net47" />
-  <package id="Nerdbank.FullDuplexStream" version="1.0.9" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="StreamJsonRpc" version="1.2.8" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net47" />
