--- a/source/dotnet/LiveCardServer/packages.config
+++ b/source/dotnet/LiveCardServer/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Microsoft.VisualStudio.Threading" version="15.3.20" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net47" />
-  <package id="Nerdbank.FullDuplexStream" version="1.0.9" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="StreamJsonRpc" version="1.2.8" targetFramework="net47" />
   <package id="Validation" version="2.3.7" targetFramework="net47" />
 </packages>
