--- a/source/dotnet/HelloWorldServer/HelloWorldServer.csproj
+++ b/source/dotnet/HelloWorldServer/HelloWorldServer.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" />
     <PackageReference Include="StreamJsonRpc" Version="1.2.8" />
     <PackageReference Include="System.IO" Version="4.3.0" />
   </ItemGroup>
