--- a/source/uwp/NuGet/AdaptiveCards.Rendering.Uwp.native.targets
+++ b/source/uwp/NuGet/AdaptiveCards.Rendering.Uwp.native.targets
@@ -5,9 +5,9 @@
         <AdaptiveCards-Platform Condition="'$(Platform)' != 'Win32'">$(Platform)</AdaptiveCards-Platform>
     </PropertyGroup>
     <ItemGroup Condition="'$(TargetPlatformIdentifier)' == 'UAP'">
-        <Reference Include="$(MSBuildThisFileDirectory)..\..\lib\native\AdaptiveCards.Uwp.winmd">
-            <Implementation>AdaptiveCards.Uwp.dll</Implementation>
+        <Reference Include="$(MSBuildThisFileDirectory)..\..\lib\native\AdaptiveCards.Rendering.Uwp.winmd">
+            <Implementation>AdaptiveCards.Rendering.Uwp.dll</Implementation>
         </Reference>
-        <ReferenceCopyLocalPaths Include="$(MSBuildThisFileDirectory)..\..\runtimes\win10-$(AdaptiveCards-Platform)\native\AdaptiveCards.Uwp.dll" />
+        <ReferenceCopyLocalPaths Include="$(MSBuildThisFileDirectory)..\..\runtimes\win10-$(AdaptiveCards-Platform)\native\AdaptiveCards.Rendering.Uwp.dll" />
     </ItemGroup>
 </Project>
