--- a/source/uwp/NuGet/AdaptiveCards.Rendering.Uwp.nuspec
+++ b/source/uwp/NuGet/AdaptiveCards.Rendering.Uwp.nuspec
@@ -33,6 +33,6 @@
         <file src="..\ARM\$Configuration$\AdaptiveCardRenderer\AdaptiveCards.Rendering.Uwp.pdb" target="runtimes\win10-arm\native"/>
 
         <file src="AdaptiveCards.Rendering.Uwp.targets" target="build\uap10.0"/>
-        <file src="AdaptiveCards.Rendering.Uwp.native.targets" target="build\native"/>
+        <file src="AdaptiveCards.Rendering.Uwp.native.targets" target="build\native\AdaptiveCards.Rendering.Uwp.targets"/>
     </files>
 </package>
