--- a/source/uwp/NuGet/AdaptiveCards.Rendering.Uwp.nuspec
+++ b/source/uwp/NuGet/AdaptiveCards.Rendering.Uwp.nuspec
@@ -15,6 +15,7 @@
     </metadata>
     <files>
         <file src="..\$Configuration$\AdaptiveCardRenderer\AdaptiveCards.Rendering.Uwp.winmd" target="lib\uap10.0"/>
+        <file src="..\$Configuration$\AdaptiveCardRenderer\AdaptiveCards.Rendering.Uwp.winmd" target="lib\native"/>
 
         <file src="..\$Configuration$\AdaptiveCardRenderer\AdaptiveCards.Rendering.Uwp.dll" target="runtimes\win10-x86\native"/>
         <file src="..\$Configuration$\AdaptiveCardRenderer\AdaptiveCards.Rendering.Uwp.lib" target="runtimes\win10-x86\native"/>
@@ -32,6 +33,6 @@
         <file src="..\ARM\$Configuration$\AdaptiveCardRenderer\AdaptiveCards.Rendering.Uwp.pdb" target="runtimes\win10-arm\native"/>
 
         <file src="AdaptiveCards.Rendering.Uwp.targets" target="build\uap10.0"/>
-        <file src="AdaptiveCards.Rendering.Uwp.native.targets" target="build\native"/>
+        <file src="AdaptiveCards.Rendering.Uwp.native.targets" target="build\native\AdaptiveCards.Rendering.Uwp.targets"/>
     </files>
 </package>
