--- a/source/vscode/package.json
+++ b/source/vscode/package.json
@@ -2,8 +2,8 @@
   "name": "vscode-adaptivecards",
   "displayName": "Adaptive Card Viewer",
   "description": "Adaptive Card Viewer for Visual Studio Code.",
-  "version": "1.0.1",
-  "publisher": "Microsoft",
+  "version": "1.1.1",
+  "publisher": "tomlm",
   "engines": {
     "vscode": "^1.9.0"
   },
@@ -63,10 +63,10 @@
     "@types/mocha": "2.2.39",
     "@types/node": "^7.0.5",
     "typescript": "^2.2.1",
-    "vscode": "^1.0.4"
+    "vscode": "^1.9.0"
   },
   "dependencies": {
-    "adaptive-cards": "^0.1.3"
+    "adaptivecards": "^1.0.0-beta10"
   },
   "repository": {
     "type": "git",
