--- a/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
+++ b/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
@@ -37,6 +37,8 @@
     <ClCompile Include="..\..\shared\cpp\ObjectModel\MarkDownHtmlGenerator.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\MarkDownBlockParser.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\MarkDownParsedResult.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\TextBlockText.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\TextSection.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\shared\cpp\ObjectModel\Container.h" />
@@ -79,6 +81,8 @@
     <ClInclude Include="..\..\shared\cpp\ObjectModel\MarkDownHtmlGenerator.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\MarkDownBlockParser.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\MarkDownParsedResult.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\TextBlockText.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\TextSection.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
