Add basic functionality to xamarin android app

--- a/source/xamarin/AdaptiveCards.Rendering.Xamarin.Android/AdaptiveCards.Rendering.Xamarin.Android.csproj
+++ b/source/xamarin/AdaptiveCards.Rendering.Xamarin.Android/AdaptiveCards.Rendering.Xamarin.Android.csproj
@@ -74,17 +74,13 @@
   <ItemGroup>
     <None Include="Additions\AboutAdditions.txt" />
     <None Include="Jars\AboutJars.txt" />
+    <LibraryProjectZip Include="Jars\adaptivecards-debug.aar" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <TransformFile Include="Transforms\EnumFields.xml" />
     <TransformFile Include="Transforms\EnumMethods.xml" />
     <TransformFile Include="Transforms\Metadata.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <LibraryProjectZip Include="..\..\android\adaptivecards\build\outputs\aar\adaptivecards-debug.aar">
-      <Link>Jars\adaptivecards-debug.aar</Link>
-    </LibraryProjectZip>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <Import Project="..\packages\Xamarin.Build.Download.0.4.3\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.3\build\Xamarin.Build.Download.targets')" />
