--- a/source/xamarin/AdaptiveCards.Rendering.Xamarin.Android.Sample/AdaptiveCards.Rendering.Xamarin.Android.Sample.csproj
+++ b/source/xamarin/AdaptiveCards.Rendering.Xamarin.Android.Sample/AdaptiveCards.Rendering.Xamarin.Android.Sample.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Xamarin.Build.Download.0.4.3\build\Xamarin.Build.Download.props" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.3\build\Xamarin.Build.Download.props')" />
   <PropertyGroup>
@@ -86,7 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml" />
-    <AndroidResource Include="Resources\values\Strings.xml" />
+    <AndroidResource Include="Resources\values\Strings.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\mipmap-hdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-mdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xhdpi\Icon.png" />
@@ -98,10 +100,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AdaptiveCards.Rendering.Xamarin.Android\AdaptiveCards.Rendering.Xamarin.Android.csproj">
-      <Project>{98A14838-2FDB-4CA1-892C-93154122C3BB}</Project>
+      <Project>{98a14838-2fdb-4ca1-892c-93154122c3bb}</Project>
       <Name>AdaptiveCards.Rendering.Xamarin.Android</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\AdaptiveCards.BotConnection\AdaptiveCards.BotConnection.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Build.Download.0.4.3\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.3\build\Xamarin.Build.Download.targets')" />
   <Import Project="..\packages\Xamarin.Android.Support.Annotations.25.3.1\build\MonoAndroid70\Xamarin.Android.Support.Annotations.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Annotations.25.3.1\build\MonoAndroid70\Xamarin.Android.Support.Annotations.targets')" />
