Fix PR comments
Fix android version due to changes in shared model

Fix build error for shared model

fixed container style issue (#1162)

* fixed container style issue

* adding forgotten files back

added default values for choice set (#1167)

* added default values for choice set

* CR fixes

Make the timezone during for the DateTime tests always Pacific, since tests assume that that is the current timezone. (#1158)

Eschavez/androidActions (#1141)

* Improving the pop up dialog in sample app.

* Overriding button styles that get applied to card

* Using single action handler for submit, openUrl, and showCard. Also removing unused imports.

* Re-run swig to fix build failures, and inline show cards now works!

* First attempt at converting dp to px size

* Weight is allowed to be a float

* re-enabling padding as a size for card element. Also fixing issue with TextBlock adding new line and ignoring the markdown tags

* Supporting select action.

* setTextSize uses sp so no need to convert

* Updating sample so it does not render the card twice

* Nits

Add the google source to properly download gradle on a build machine (#1175)

[TypeScript] Add lang support (#1177)

iOS: Support borderColor/borderThickness for Container (#1150)

* Parse borderColor from host config.

* Set borderColor at initWithStyle

* Parse borderThickness

* Set borderWidth

* Fix for a test break introduced from outside

* Added disclaimer on the experimental properties

* Changed the type of border thickness to uint.

Fix Xamarin Android build break caused by changes in ActionHandler (#1180)

Change to return FrameworkElement instead of UIElement (#1183)

Change to return FrameworkElement instead of UIElement

Adding Type string to BaseCardElement and BaseActionElement (#1186)

* Adding style string to BaseCardElement. Also re-ran swig which generated border color and thickness methods for container style.

* Adding type string to base action element

* Nit: removing extra lines

--- a/source/android/adaptivecards/CMakeLists.txt
+++ b/source/android/adaptivecards/CMakeLists.txt
@@ -56,6 +56,7 @@ add_library( # Sets the name of the library.
              ../../shared/cpp/ObjectModel/MarkDownHtmlGenerator.cpp
              ../../shared/cpp/ObjectModel/DateTimePreparser.cpp
              ../../shared/cpp/ObjectModel/DateTimePreparsedToken.cpp
+             ../../shared/cpp/ObjectModel/Util.cpp
              src/main/cpp/objectmodel_wrap.cpp
              )
 
