Add language for Date formatting (#1102)
* Updating the android renderer

* Column set is fixed. Switched to using LinearLayout with weights instead of GridLayout. Images are scaling for some reason when they shouldn't be

* Images are now being sized correctly with correct horizontal alignment

* Add lang and region tag for json parsing

* Add enums for language and region

* Add validation for setting language to TextBlock and Container

* Add locale imbuing to date stream

* Add method to propagate language to elements inside container

* Removing the weight in columns for factset. Text now goes through the Markdown parser before rendering. Also publishing updates from running SWIG.

* Fixing images not loading and auto sizing taking up entire height of original image

* Fixing the newline that gets added when using HTML for text block

* Nits

* Changes parsed text from string to wstring

* Add conversion method for WString

* Add testing, may have to escape the characters

* Fixes compilation error

* Adds testing for long and short formats in multiple languages

* Removes region tag

* Removes Region from enums

* Add lang and region tag for json parsing

* Add enums for language and region

* Add validation for setting language to TextBlock and Container

* Add locale imbuing to date stream

* Add method to propagate language to elements inside container

* Changes parsed text from string to wstring

* Add conversion method for WString

* Add testing, may have to escape the characters

* Fixes compilation error

* Adds testing for long and short formats in multiple languages

* Removes region tag

* Removes Region from enums

* Adds methods to propagate language between cards

* Add u16string conversion method

* Fixes unmerged file

* Fix java renderer issue and add new data types

* Replace dynamic_pointer_cast for static_pointer_cast

* Separates textblock string into a new class, remo

--- a/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
+++ b/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClCompile Include="..\..\shared\cpp\ObjectModel\MarkDownHtmlGenerator.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\MarkDownBlockParser.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\MarkDownParsedResult.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\DateTimePreparser.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\DateTimePreparsedToken.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\shared\cpp\ObjectModel\Container.h" />
@@ -79,6 +82,9 @@
     <ClInclude Include="..\..\shared\cpp\ObjectModel\MarkDownHtmlGenerator.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\MarkDownBlockParser.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\MarkDownParsedResult.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\DateTimePreparser.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\DateTimePreparsedToken.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\Util.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
