--- a/source/uwp/Renderer/AdaptiveCardRenderer.vcxproj.filters
+++ b/source/uwp/Renderer/AdaptiveCardRenderer.vcxproj.filters
@@ -75,6 +75,7 @@
     <ClCompile Include="lib\WholeItemsPanel.cpp" />
     <ClCompile Include="lib\AdaptiveError.cpp" />
     <ClCompile Include="lib\AdaptiveWarning.cpp" />
+    <ClCompile Include="lib\DateTimeParser.cpp" />
     <ClCompile Include="lib\HtmlHelpers.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +160,7 @@
     <ClInclude Include="lib\WholeItemsPanel.h" />
     <ClInclude Include="lib\AdaptiveError.h" />
     <ClInclude Include="lib\AdaptiveWarning.h" />
+    <ClInclude Include="lib\DateTimeParser.h" />
     <ClInclude Include="lib\HtmlHelpers.h" />
   </ItemGroup>
   <ItemGroup>
